Fix user cover_image not showing up

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,16 +29,9 @@
 
 	.cover-image {
 		height: 250px;
-		background-image: url('cover_img.jpg');
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
-
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: contain;
-		}
 	}
 
 	.reviews {
